# hackrf

./: .gitignore  README.md  check_mpl.py  config.toml  install_soapy.sh  pyproject.toml  requirements.txt  theory.ipynb
.github/workflows/: build.yml
app/static/: index.html
app/static/assets/: index-9tIJHXWL.js  index-B3i3hdbX.js  index-B9ZF-GFD.css  index-Cx3qFwBe.css  index-DmcIXtyr.js  index-l5BPD1b9.css
backend/: logger.py  main.py  requirements.txt  settings.py  theory.ipynb  utils.py
backend/schemas/: sdr.py
backend/sdr/: __init__.py  fft.py  hackrf.py  logger.py  sdr.py
backend/server/: main.py
backend/server/sdr/: router.py
backend/src/: fft.py  logger.py  main.py
backend/src/sdr/: __init__.py  hackrf.py  jscanner.py  router.py  schemas.py  sdr.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  graph_utils.js  index.css  main.jsx  materialTheme.js
frontend/src/components/: FSlider.jsx  FreqSlider.jsx  GraphCard.jsx  Heatmap.jsx  SettingsDrawer.jsx  WriteInp.jsx
frontend/src/components/SpectrChart/: ChartUtils.js  index.jsx
frontend/src/stores/: constants.js  createBaseQuery.js  index.js  reducers.js
frontend/src/stores/sdr/: index.js
gnuradio_examples/: example_1.grc  example_1.py
mpl_styles/: dark.mplstyle  light.mplstyle
src/: fft.py  main.py  settings.py  test.py
src/sdr/: __init__.py  hackrf.py  router.py  schemas.py  sdr.py
