[tool.poetry]
name = "hackrf"
version = "0.1.0"
packages = [
    { include = "backend" },
]
description = ""
authors = ["Alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
starlette = "^0.38.5"
pydantic-settings = "^2.5.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
websockets = "^13.0.1"
aiofiles = "^24.1.0"
simplesoapy = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
jupyter = "^1.1.1"

[tool.poetry.scripts]
hackrf-start = "backend.server.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

include = [
    { path = "app/static", format = ["sdist", "wheel"] },
    { path = "app/data", format = ["sdist", "wheel"] }
]
